--- a/src/catalog.html
+++ b/src/catalog.html
@@ -96,7 +96,7 @@
 
     <div class="user-panel">
       <form class="search" action="/" method="get">
-        <button class="search__btn" type="submit">
+        <button class="search__btn" type="submit" value="Поиск">
           <svg class="search__img" width="16" height="17">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"></use>
           </svg>
@@ -119,7 +119,7 @@
           Михаил Сергеевич
         </a>
         <a class="user-panel__output" href="#">Выйти</a>
-      </div
+      </div>
       <a class="user-panel__item  user-panel--compare" href="#">
         <svg class="user-panel__img" width="10" height="10">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-compare"></use>
@@ -189,12 +189,110 @@
       </li>
     </ul>
 
-    
+    <form class="filter" action="/" method="get">
+      <h3 class="filter__title">Фильтр:</h3>
+      <fieldset class="filter__item  filter__item--price">
+        <legend class="filter__subtitle">Стоимость</legend>
+        <div class="filter__wrapper  filter__wrapper--price">
+          <span class="filter__range">Линия стоимости товара</span>
+          <label class="filter__label  filter__label--price">от
+            <input class="filter__price" type="text" name="min-price" value="0">
+          </label>
+          <label class="filter__label  filter__label--price">до
+            <input class="filter__price" type="text" name="max-price" value="5000">
+          </label>
+        </div>
+      </fieldset>
+
+      <fieldset class="filter__item  filter__item--checkbox">
+        <legend class="filter__subtitle">Цвет</legend>
+        <label class="filter__label  filter__label--checkbox">
+          <input class="filter__checkbox" type="checkbox" name="color-1" value="black" checked>
+          Черный
+        </label>
+        <label class="filter__label  filter__label--checkbox">
+          <input class="filter__checkbox" type="checkbox" name="color-2" value="white">
+          Белый
+        </label>
+        <label class="filter__label  filter__label--checkbox">
+          <input class="filter__checkbox" type="checkbox" name="color-3" value="blue" checked>
+          Синий
+        </label>
+        <label class="filter__label  filter__label--checkbox">
+          <input class="filter__checkbox" type="checkbox" name="color-4" value="red" checked>
+          Красный
+        </label>
+        <label class="filter__label  filter__label--checkbox">
+          <input class="filter__checkbox" type="checkbox" name="color-5" value="pink">
+          Розовый
+        </label>
+      </fieldset>
+
+      <fieldset class="filter__item  filter__item--radio">
+        <legend class="filter__subtitle">Bluetooth</legend>
+        <label class="filter__label  filter__label--radio">
+          <input class="filter__radio" type="radio" name="radio" value="yes" checked>
+          Есть
+        </label>
+        <label class="filter__label  filter__label--radio">
+          <input class="filter__radio" type="radio" name="radio" value="no">
+          Нет
+        </label>
+      </fieldset>
+
+      <input class="filter__btn  btn" type="submit" value="Показать">
+    </form>
+
+    <section class="products">
+      <div class="sort">
+        <h3 class="sort__subtitle">Сортировать:</h3>
+        <a class="sort__link" href="#">По цене</a>
+        <a class="sort__link" href="#">По типу</a>
+        <a class="sort__link" href="#">По популярности</a>
+      </div>
+
+      <figure class="products__item">
+        <img class="products__img" src="img/item-1.jpg" srcset="img/item-1@2x.jpg" width="360" height="380" alt="Любительская селфи-палка">
+        <figcaption>
+          <h4 class="products__name">Любительская селфи палка</h4>
+          <span class="products__price">500 руб.</span>
+        </figcaption>
+      </figure>
+      <figure class="products__item">
+        <img class="products__img" src="img/item-2.jpg" srcset="img/item-2@2x.jpg" width="360" height="380" alt="Професиональная селфи-палка">
+        <figcaption>
+          <h4 class="products__name">Профессиональная селфи-палка </h4>
+          <span class="products__price">1 500 руб.</span>
+        </figcaption>
+      </figure>
+      <figure class="products__item">
+        <img class="products__img" src="img/item-3.jpg" srcset="img/item-3@2x.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+        <figcaption>
+          <h4 class="products__name">Непотопляемая селфи-палка</h4>
+          <span class="products__price">2 500 руб.</span>
+        </figcaption>
+      </figure>
+      <figure class="products__item">
+        <img class="products__img" src="img/item-4.jpg" srcset="img/item-4@2x.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+        <figcaption>
+          <h4 class="products__name">Селфи-палка «Следуй за мной»</h4>
+          <span class="products__price">4 500 руб.</span>
+        </figcaption>
+      </figure>
+
+      <div class="pagination">
+        <a class="pagination__link" href="#">Назад</a>
+        <a class="pagination__link" href="#">1</a>
+        <a class="pagination__link" href="#">2</a>
+        <a class="pagination__link" href="#">3</a>
+        <a class="pagination__link" href="#">Вперед</a>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
     <div class="footer__wrapper">
-      <a class="logo">
+      <a class="logo" href="index.html">
         <h1 class="logo__title">Device</h1>
       </a>
 
@@ -232,7 +330,7 @@
           <a class="menu__link" href="#">Контакты</a>
         </li>
       </ul>
-      <a class="footer__tel" href="tel:+7 (495) 495-95-95">Тел.: +7 (495) 495-95-95</a>
+      <a class="footer__tel" href="tel:+7495-95-95">Тел.: +7 (495) 495-95-95</a>
     </div>
     <div class="footer__wrapper">
       <div class="social-icons">
