--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
 
     <div class="user-panel">
       <form class="search" action="/" method="get">
-        <button class="search__btn" type="submit">
+        <button class="search__btn" type="submit" value="Поиск">
           <svg class="search__img" width="16" height="17">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"></use>
           </svg>
@@ -111,15 +111,6 @@
         </svg>
         Войти
       </a>
-      <div class="user-panel__connect  user-panel__connect--active">
-        <a class="user-panel__item  user-panel--login" href="#">
-          <svg class="user-panel__img" width="13" height="12">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-user"></use>
-          </svg>
-          Михаил Сергеевич
-        </a>
-        <a class="user-panel__output" href="#">Выйти</a>
-      </div>
       <a class="user-panel__item  user-panel--compare" href="#">
         <svg class="user-panel__img" width="10" height="10">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-compare"></use>
@@ -143,7 +134,7 @@
             <a class="catalog-menu__link" href="#">Виртуальная реальность</a>
           </li>
           <li class="catalog-menu__item">
-            <a class="catalog-menu__link" href="#">Моноподы для селфи</a>
+            <a class="catalog-menu__link" href="catalog.html">Моноподы для селфи</a>
           </li>
           <li class="catalog-menu__item">
             <a class="catalog-menu__link" href="#">Экшн-камеры</a>
@@ -253,7 +244,7 @@
           <a class="catalog__link" href="#">Виртуальная реальность</a>
         </li>
         <li class="catalog__item">
-          <a class="catalog__link" href="#">Моноподы для селфи</a>
+          <a class="catalog__link" href="catalog.html">Моноподы для селфи</a>
         </li>
         <li class="catalog__item">
           <a class="catalog__link" href="#">Экшн-камеры</a>
@@ -379,7 +370,7 @@
           <a class="menu__link" href="#">Контакты</a>
         </li>
       </ul>
-      <a class="footer__tel" href="tel:+7 (495) 495-95-95">Тел.: +7 (495) 495-95-95</a>
+      <a class="footer__tel" href="tel:+7495-95-95">Тел.: +7 (495) 495-95-95</a>
     </div>
     <div class="footer__wrapper">
       <div class="social-icons">
