--- a/src/catalog.html
+++ b/src/catalog.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Device: каталог</title>
+  <link rel="stylesheet" href="css/style-min.css">
 </head>
 <body>
   <svg style="display:none">
@@ -29,12 +30,17 @@
 				c2.552,2.58,6.019,4.078,9.652,4.133l2.136,0.014c10.194,0,26.171-1.234,44.492-7.143c-5.866,6.199-13.494,13.189-23.383,20.831
 				c-4.854,3.759-6.657,10.25-4.452,15.963c2.205,5.728,7.975,9.334,14.021,8.834c2.247-0.18,12.121-1.04,24.34-3.231
 				C550.183,161.801,540.378,171.273,527.896,182.604z"/>
-    <symbol viewBox="0 0 288.861 288.861" id="icon-faceboock">
-      <path d="M167.172,288.861h-62.16V159.347H70.769v-59.48h34.242v-33.4C105.011,35.804,124.195,0,178.284,0
-    		c19.068,0,33.066,1.787,33.651,1.864l5.739,0.746l-1.382,55.663l-6.324-0.058c-0.013,0-14.223-0.135-29.724-0.135
-    		c-11.536,0-13.066,2.847-13.066,14.171v27.629h50.913l-2.821,59.48h-48.086v129.501H167.172z M117.858,276.007h36.453V146.5h48.677
-    		l1.607-33.779h-50.284V72.238c0-13.368,3.078-27.025,25.919-27.025c9.178,0,17.899,0.045,23.509,0.09l0.778-31.292
-    		c-5.675-0.508-15.116-1.157-26.247-1.157c-44.544,0-60.419,27.693-60.419,53.613v46.254H83.61V146.5h34.242v129.507H117.858z"/>
+    <symbol viewBox="0 0 792 792" id="icon-faceboock">
+      <path d="M614.582,0.128L494.197,0.184c0,0-2.439-0.184-6.826-0.184C462.67,0,337.754,6.863,303.768,140.809
+				c-0.532,1.486-11.965,35.014-12.148,112.988h-114.2c-10.129,0-18.351,8.221-18.351,18.351v105.226
+				c0,10.13,8.222,18.351,18.351,18.351h124.898v377.924c0,10.13,8.221,18.352,18.351,18.352H463.68
+				c10.129,0,18.352-8.222,18.352-18.352V396.109h125.301c10.131,0,18.352-8.221,18.352-18.351V272.148
+				c0-10.13-8.221-18.351-18.352-18.351H482.287v-45.163c0-30.078,19.086-62.21,72.672-62.21h59.623
+				c10.129,0,18.35-8.221,18.35-18.351V18.479C632.932,8.35,624.729,0.128,614.582,0.128z M596.23,109.722h-41.271
+				c-75.553,0-109.373,49.677-109.373,98.913v63.514c0,10.13,8.221,18.351,18.35,18.351H588.98v68.909H463.68
+				c-10.131,0-18.352,8.221-18.352,18.351v377.539H339.02V377.374c0-10.13-8.221-18.351-18.351-18.351H195.771v-68.523h114.346
+				c4.936,0,9.652-1.982,13.103-5.505s5.34-8.276,5.249-13.213c-1.633-83.461,9.836-118.604,10.387-120.384
+				C365.923,44.979,459.385,36.702,487.371,36.702c2.551,0,4.074,0.074,5.561,0.129H596.23V109.722L596.23,109.722z"/>
     </symbol>
     <symbol viewBox="0 0 612 612" id="icon-instagram">
       <path d="M513.381,84.865h-56.158c-18.346,0-33.281,14.936-33.281,33.281v56.144c0,18.345,14.936,33.281,33.281,33.281h56.158
@@ -89,19 +95,19 @@
 				c1.658,0,3.342-1.299,3.767-2.9l6.996-28.498C47.893,16.065,47.553,15.631,47,15.631z"/>
     </symbol>
   </svg>
-  <header class="page-header">
-    <a class="logo" href="index.html">
+
+  <header class="page-header  container">
+    <a class="logo  page-header__logo" href="index.html">
       <h1 class="logo__title">Device</h1>
     </a>
 
-    <div class="user-panel">
-      <form class="search" action="/" method="get">
-        <button class="search__btn" type="submit" value="Поиск">
-          <svg class="search__icon" width="16" height="16">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"></use>
-          </svg>
-          <input class="search__input" type="text" name="search" placeholder="Поиск по сайту">
-          <button class="search__btn" type="submit" value="Найти">Найти</button>
+    <div class="user-panel  page-header__user-panel">
+      <form class="search  user-panel__search" action="/" method="get">
+        <svg class="search__icon" width="16" height="16">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"></use>
+        </svg>
+        <input class="search__input" type="text" name="search" placeholder="Поиск по сайту">
+        <button class="search__btn" type="submit" name="Найти">Найти</button>
       </form>
 
       <a class="user-panel__link  user-panel__link--login" href="#">
@@ -126,40 +132,39 @@
         Сравнить
       </a>
       <a class="user-panel__link  user-panel__link--basket" href="#">
-        <svg class="user-panel__img" width="12" height="12">
+        <svg class="user-panel__icon" width="12" height="12">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-basket"></use>
         </svg>
         Корзина
       </a>
     </div>
 
-    <nav class="main-menu">
-      <div class="main-menu__catalog">
-        <a class="main-menu__link  main-menu__link--catalog" href="#">Каталог товаров</a>
-
-        <ul class="main-menu__inner-list">
-          <li class="main-menu__inner-item">
-            <a class="main-menu__inner-link" href="#">Виртуальная реальность</a>
-          </li>
-          <li class="main-menu__inner-item">
-            <a class="main-menu__inner-link">Моноподы для селфи</a>
-          </li>
-          <li class="main-menu__inner-item">
-            <a class="main-menu__inner-link" href="#">Экшн-камеры</a>
-          </li>
-          <li class="main-menu__inner-item">
-            <a class="main-menu__inner-link" href="#">Фитнес браслеты</a>
-          </li>
-          <li class="main-menu__inner-item">
-            <a class="main-menu__inner-link" href="#">Умные часы</a>
-          </li>
-          <li class="main-menu__inner-item">
-            <a class="main-menu__inner-link" href="#">Квадрокоптеры</a>
-          </li>
-        </ul>
-      </div>
-
+    <nav class="main-menu  page-header__main-menu">
       <ul class="main-menu__list">
+        <li class="main-menu__item  main-menu__item--catalog">
+          <a class="main-menu__link  main-menu__link--catalog" href="#">Каталог товаров</a>
+          <ul class="main-menu__inner-list">
+            <li class="main-menu__inner-item">
+              <a class="main-menu__inner-link" href="#">Виртуальная реальность</a>
+            </li>
+            <li class="main-menu__inner-item">
+              <a class="main-menu__inner-link" href="#">Фитнес браслеты</a>
+            </li>
+            <li class="main-menu__inner-item">
+              <a class="main-menu__inner-link" href="#">Квадрокоптеры</a>
+            </li>
+            <li class="main-menu__inner-item">
+              <a class="main-menu__inner-link" href="catalog.html">Моноподы для селфи</a>
+            </li>
+            <li class="main-menu__inner-item">
+              <a class="main-menu__inner-link" href="#">Умные часы</a>
+            </li>
+            <li class="main-menu__inner-item">
+              <a class="main-menu__inner-link" href="#">Экшн-камеры</a>
+            </li>
+          </ul>
+
+        </li>
         <li class="main-menu__item">
           <a class="main-menu__link" href="#">Доставка</a>
         </li>
@@ -292,74 +297,76 @@
   </main>
 
   <footer class="page-footer">
-    <div class="footer__wrapper">
-      <a class="logo" href="index.html">
-        <h1 class="logo__title">Device</h1>
-      </a>
+    <div class="container">
+      <div class="page-footer__wrapper">
+        <a class="logo  page-footer__logo">
+          <h1 class="logo__title  logo__title--color">Device</h1>
+        </a>
 
-      <div class="user-panel">
-        <a class="user-panel__link  user-panel__link--login" href="#">
-          <svg class="user-panel__img" width="13" height="12">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-user"></use>
+        <div class="user-panel  page-footer__user-panel">
+          <a class="user-panel__link  user-panel__link--login" href="#">
+            <svg class="user-panel__icon  user-panel__icon--color" width="13" height="12">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-user"></use>
+            </svg>
+            Войти
+          </a>
+          <a class="user-panel__link  user-panel__link--compare" href="#">
+            <svg class="user-panel__icon  user-panel__icon--color" width="10" height="10">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-compare"></use>
+            </svg>
+            Сравнить
+          </a>
+          <a class="user-panel__link  user-panel__link--basket" href="#">
+            <svg class="user-panel__icon  user-panel__icon--color" width="12" height="12">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-basket"></use>
+            </svg>
+            Корзина
+          </a>
+        </div>
+      </div>
+      <div class="page-footer__wrapper  page-footer__wrapper--margin">
+        <a class="page-footer__address" href="https://www.google.com.ua/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%91%D1%83%D0%B4%D1%96%D0%B2%D0%B5%D0%BB%D1%8C%D0%BD%D0%B8%D0%BA%D1%96%D0%B2,+15,+%D0%9A%D0%B8%D1%97%D0%B2/@50.44656,30.6172205,17z/data=!4m5!3m4!1s0x40d4c558fe7b4d41:0x168024cc6745f48a!8m2!3d50.445995!4d30.616772">г. Москва, ул. Строителей, 15</a>
+        <ul class="main-menu  page-footer__main-menu  main-menu--footer">
+          <li class="main-menu__item">
+            <a class="main-menu__link  main-menu__link--color" href="#">Доставка</a>
+          </li>
+          <li class="main-menu__item">
+            <a class="main-menu__link  main-menu__link--color" href="#">Гарантия</a>
+          </li>
+          <li class="main-menu__item">
+            <a class="main-menu__link  main-menu__link--color" href="#">Контакты</a>
+          </li>
+        </ul>
+        <a class="page-footer__tel" href="tel:+7495-95-95">Тел.: +7 (495) 495-95-95</a>
+      </div>
+      <div class="page-footer__wrapper  page-footer__wrapper--after">
+        <div class="social-icons  page-footer__social-icons">
+  				<a class="social-link  social-icons__social-link  social-link--fb" href="#">
+            Faceboock
+            <svg class="social-link__icon" width="22" height="22">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-faceboock"></use>
+            </svg>
+          </a>
+          <a class="social-link  social-icons__social-link  social-link--inst" href="#">
+            Instagram
+            <svg class="social-link__icon" width="22" height="22">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-instagram"></use>
+            </svg>
+          </a>
+  				<a class="social-link  social-icons__social-link  social-link--tw" href="#">
+            Twitter
+            <svg class="social-link__icon" width="22" height="18">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use>
+            </svg>
+          </a>
+  			</div>
+
+        <a class="page-footer__copyright" href="https://htmlacademy.ru/">
+          <svg class="page-footer__icon-copy  page-footer__icon-copy--color" width="27" height="34">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-htmlacademy"></use>
           </svg>
-          Войти
-        </a>
-        <a class="user-panel__link  user-panel__link--compare" href="#">
-          <svg class="user-panel__img" width="10" height="10">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-compare"></use>
-          </svg>
-          Сравнить
-        </a>
-        <a class="user-panel__link  user-panel__link--basket" href="#">
-          <svg class="user-panel__img" width="12" height="12">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-basket"></use>
-          </svg>
-          Корзина
         </a>
       </div>
-    </div>
-    <div class="footer__wrapper">
-      <a class="footer__address" href="https://www.google.com.ua/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%91%D1%83%D0%B4%D1%96%D0%B2%D0%B5%D0%BB%D1%8C%D0%BD%D0%B8%D0%BA%D1%96%D0%B2,+15,+%D0%9A%D0%B8%D1%97%D0%B2/@50.44656,30.6172205,17z/data=!4m5!3m4!1s0x40d4c558fe7b4d41:0x168024cc6745f48a!8m2!3d50.445995!4d30.616772">г. Москва, ул. Строителей, 15</a>
-      <ul class="main-menu  main-menu--footer">
-        <li class="main-menu__item">
-          <a class="main-menu__link" href="#">Доставка</a>
-        </li>
-        <li class="main-menu__item">
-          <a class="main-menu__link" href="#">Гарантия</a>
-        </li>
-        <li class="main-menu__item">
-          <a class="main-menu__link" href="#">Контакты</a>
-        </li>
-      </ul>
-      <a class="footer__tel" href="tel:+7495-95-95">Тел.: +7 (495) 495-95-95</a>
-    </div>
-    <div class="footer__wrapper">
-      <div class="social-icons">
-				<a class="social-link  social-link--fb" href="#">
-          Faceboock
-          <svg class="social-link__icon" width="12" height="22">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-faceboock"></use>
-          </svg>
-        </a>
-        <a class="social-link  social-link--inst" href="#">
-          Instagram
-          <svg class="social-link__icon" width="22" height="22">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-instagram"></use>
-          </svg>
-        </a>
-				<a class="social-link  social-link--tw" href="#">
-          Twitter
-          <svg class="social-link__icon" width="22" height="18">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use>
-          </svg>
-        </a>
-			</div>
-
-      <a class="footer__copyright" href="https://htmlacademy.ru/">
-        <svg class="social-link__icon" width="27" height="34">
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-htmlacademy"></use>
-        </svg>
-      </a>
     </div>
   </footer>
 </body>
