--- a/src/index.html
+++ b/src/index.html
@@ -102,10 +102,12 @@
 
     <div class="user-panel  page-header__user-panel">
       <form class="search  user-panel__search" action="/" method="get">
-        <svg class="search__icon" width="16" height="16">
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"></use>
-        </svg>
-        <input class="search__input" type="text" name="search" placeholder="Поиск по сайту">
+        <label class="search__label" for="search-icon">
+          <svg class="search__icon" width="16" height="16">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"></use>
+          </svg>
+        </label>
+        <input class="search__input" id="search-icon" type="text" name="search" placeholder="Поиск по сайту">
         <button class="search__btn" type="submit" name="Найти">Найти</button>
       </form>
 
@@ -115,6 +117,15 @@
         </svg>
         Войти
       </a>
+      <div class="user-panel__connect">
+        <a class="user-panel__link  user-panel__link--login" href="#">
+          <svg class="user-panel__icon" width="13" height="12">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-user"></use>
+          </svg>
+          Михаил Сергеевич
+        </a>
+        <button class="user-panel__output-btn" type="button">Выйти</button>
+      </div>
       <a class="user-panel__link  user-panel__link--compare" href="#">
         <svg class="user-panel__icon" width="10" height="10">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-compare"></use>
@@ -175,7 +186,7 @@
         <input class="slider__radio" type="radio" id="toggle-2" name="toggle">
         <input class="slider__radio" type="radio" id="toggle-3" name="toggle">
 
-        <div class="slide  slider__slide  slide--one">
+        <div class="slide  slider__slide  slide--first">
           <img class="slide__img  slide__img--padding" src="img/slider-1.png" srcset="img/slider-1@2x.png" width="384" height="486" alt="Селфипалка">
           <div class="slide__description">
             <h2 class="slide__title">Делай селфи, как Бен Стиллер!</h2>
@@ -220,7 +231,7 @@
           </div>
         </div>
 
-        <div class="slide  slider__slide  slide--three">
+        <div class="slide  slider__slide  slide--third">
           <img class="slide__img" src="img/slider-3.png" srcset="img/slider-3@2x.png" width="526" height="334" alt="Квадрокоптер">
           <div class="slide__description">
             <h2 class="slide__title  slide__title--padding">Порхает как бабочка, жалит как пчела!</h2>
@@ -249,7 +260,7 @@
         </div>
       </div>
 
-      <div class="popular  page-main__popular">
+      <section class="popular  page-main__popular">
         <a class="popular__link  popular__link--virtual" href="#">
           <h3 class="popular__title">Виртуальная реальность</h3>
         </a>
@@ -268,7 +279,7 @@
         <a class="popular__link  popular__link--drone" href="#">
           <h3 class="popular__title">Квадрокоптеры</h3>
         </a>
-      </div>
+      </section>
     </div>
 
     <section class="services  page-main__services">
@@ -305,13 +316,13 @@
       </div>
     </section>
 
-    <div class="container  clearfix">
-      <div class="brends  page-main__brends">
+    <div class="container">
+      <section class="brends  page-main__brends">
         <a class="brends__link  brends__link--dji" href="#">DJI</a>
         <a class="brends__link  brends__link--gadjets" href="#">Sp Gadjets</a>
         <a class="brends__link  brends__link--gopro" href="#">GoPro</a>
         <a class="brends__link  brends__link--vive" href="#">Vive</a>
-      </div>
+      </section>
 
       <section class="about  page-main__about">
         <h2 class="about__title">О нас</h2>
